<resources>
    <string name="app_name">Smart Pantry</string>
    <string name="show">show</string>
    <string name="button">Button</string>
    <string name="unit">Unit:</string>
    <string name="quantity">Quantity</string>
    <string name="ingredientname">IngredientName</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="image_of_food">image of food</string>
    <string name="erase">Erase</string>
    <string name="settings">Settings</string>
    <string name="erase_all_ingredients">Erase all Ingredients</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="alerts_for_expiring_ingredients">Alerts for expiring ingredients</string>
</resources>