<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#D1D1D1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="10dp"
        >

        <TextView
            android:id="@+id/ingredientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="8dp"
            android:text="@string/ingredientname"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/ingredientExpire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingEnd="80dp"
            android:text="expire DAte" />

        <TextView
            android:id="@+id/ingredientQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="1dp"
            android:text="@string/quantity"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/ingredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="#000000" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
